Generate client from api spec
